--- a/1.css
+++ b/1.css
@@ -1,13 +1,13 @@
 body {
-  width: -webkit-fill-available; 
-  height: 100%; 
+  width: 20%;  
+  height: 100%;  
   display: flex; 
   flex-direction: column;
   -webkit-flex-direction: column;
   -moz-flex-direction: column;
   -o-flex-direction: column;
 }
-body { width： -webkit-fill-available; height： 100%; display： flex; flex-direction： column; -webkit-flex-direction： column; -moz-flex-direction： column; -o-flex-direction： column; }
+body { width： 20%; height： 100%; display： flex; flex-direction： column; -webkit-flex-direction： column; -moz-flex-direction： column; -o-flex-direction： column; } 
 header {
   text-align: center;
   flex-grow: 0;
