--- a/1.css
+++ b/1.css
@@ -7,7 +7,7 @@ body {
   -moz-flex-direction: column;
   -o-flex-direction: column;
 }
-body { width： 20%; height： 100%; display： flex; flex-direction： column; -webkit-flex-direction： column; -moz-flex-direction： column; -o-flex-direction： column; } 
+body { width： 20%; height： 100%; display： flex; flex-direction： column; -webkit-flex-direction： column; -moz-flex-direction： column; -o-flex-direction： column; }       
 header {
   text-align: center;
   flex-grow: 0;
@@ -79,7 +79,7 @@ footer {
 #seller .list { padding： 0 5rem;
 @media screen and (max-width: 479px) {
   p {
-      width: -webkit-fill-available;
+      width: 20%;
       text-align: center;
       line-height: 1.5rem;
       word-wrap: break-word;
